sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value cpt
  cpt = 0
  ^AlgBubbleSort1:5: error: not found: value tri
  tri = false
  ^AlgBubbleSort1:6: error: not found: value tri
  while (tri = false)
         ^AlgBubbleSort1:13: error: not found: value cpt
        cpt+=1
        ^AlgBubbleSort1:16: error: not found: value cpt
    if (cpt == 0)
        ^AlgBubbleSort1:18: error: not found: value tri
      tri = true
      ^AlgBubbleSort1:20: error: not found: value cpt
    cpt = 0
    ^